# libwolfram20

./: .gitignore  .travis.yml  README.md
Wolfram/: CMakeLists.txt  WAEngine.cpp  WAEngine.h  WAError.cpp  WAError.h  WAImage.cpp  WAImage.h  WAPod.cpp  WAPod.h  WAPodState.cpp  WAPodState.h  WAQuery.cpp  WAQuery.h  WAResult.cpp  WAResult.h  WASubpod.cpp  WASubpod.h
examples/: build.sh
examples/solve/: CMakeLists.txt  main.cpp
examples/solve-2d/: main.cpp
examples/solve-exhaustive/: .gitignore  CMakeLists.txt  main.cpp
examples/solve2d/: .gitignore  CMakeLists.txt  main.cpp
examples/tests/: .gitignore  CMakeLists.txt  ProgramLauncher.h  README.md  main.cpp
